--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-<h1>About</h1>
+<h1>About me</h1>
 
-<p>Welcome to my about page!</p>
-{% endblock content}
+<p>Hello my name is Samuel and I am a student at SDGKU!</p>
+{% endblock content %}
